v_2(main.html, SCSS)

--- a/pages/main.html
+++ b/pages/main.html
@@ -18,9 +18,56 @@
 
   <body>
     <div class="wrapper">
-      <header id="header"></header>
+      <header id="header">
+        <h3 class="title">souaMusic Player</h3>
+      </header>
 
-      <main id="main"></main>
+      <main id="main">
+        <div class="container">
+          <section class="info">
+            <div class="imgBox">
+              <img src="../src/img/За спиной.jpg" alt="Error" class="img" />
+            </div>
+
+            <div class="box__forInfoAndButton">
+              <div class="box__nameAndSinger">
+                <span class="name">За спиной</span>
+
+                <span class="singer">Адлин</span>
+              </div>
+
+              <div class="button__openList">
+                <a href="../pages/list.html" class="box__srcList">
+                  <img src="" alt="Error" class="box__srcIconList">
+                </a>
+              </div>
+
+              </div>
+            </div>
+
+            <div class="box__progress">
+              <div class="progress"></div>
+            </div>
+          </section>
+
+          <div class="navbar">
+            <div class="navbar__prev">
+              <img src="" alt="Error" class="navbar__srcIconPrev">
+            </div>
+
+            <div class="navbar__play">
+              <img src="" alt="Error" class="navbar__srcIconPlay">
+            </div>
+            <div class="navbar__pause active_pause">
+              <img src="" alt="Error" class="navbar__srcIconPause">
+            </div>
+
+            <div class="navbar__next">
+              <img src="" alt="Error" class="navbar__srcIconNext">
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
     <script src="../js/main.js"></script>
   </body>
