--- a/pages/main.html
+++ b/pages/main.html
@@ -4,70 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,regular,500,700,900"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,regular,500,700,900"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../style/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Poppins:wght@400;500&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style/css/main.css" />
     <title>souaPlayer</title>
   </head>
 
   <body>
     <div class="wrapper">
       <header id="header">
-        <h3 class="title">souaMusic Player</h3>
+        <div class="header__boxForFlex">
+          <h3 class="title">souaMusic Player</h3>
+          <div class="button__openList">
+            <a href="../pages/list.html" class="box__srcList">
+              <img src="../src/icons/list.svg" alt="Error" class="box__srcIconList">
+            </a>
+          </div>
+        </div>
       </header>
 
       <main id="main">
-        <div class="container">
-          <section class="info">
+        <section class="container">
+          <div class="info">
             <div class="imgBox">
-              <img src="../src/img/За спиной.jpg" alt="Error" class="img" />
+              <img src="../src/img/За спиной.jpg" alt="Error" height="290" width="290" class="img" />
             </div>
 
-            <div class="box__forInfoAndButton">
-              <div class="box__nameAndSinger">
-                <span class="name">За спиной</span>
-
-                <span class="singer">Адлин</span>
-              </div>
-
-              <div class="button__openList">
-                <a href="../pages/list.html" class="box__srcList">
-                  <img src="" alt="Error" class="box__srcIconList">
-                </a>
-              </div>
-
-              </div>
+            <div class="box__forInfoSong">
+              <span class="name">Behind the back</span>
+              <span class="singer">Adlin</span>
             </div>
 
+            <audio src="../audio/Адлин - За Спиной.mp3" id="audio"></audio>
             <div class="box__progress">
               <div class="progress"></div>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <div class="navbar">
+        <section class="navbar">
             <div class="navbar__prev">
-              <img src="" alt="Error" class="navbar__srcIconPrev">
+              <img src="../src/icons/left Prev & Next.svg" alt="Error" class="navbar__srcIconPrev">
             </div>
 
-            <div class="navbar__play">
-              <img src="" alt="Error" class="navbar__srcIconPlay">
-            </div>
-            <div class="navbar__pause active_pause">
-              <img src="" alt="Error" class="navbar__srcIconPause">
+            <div class="navbar__playAndPause">
+              <img src="../src/icons/play.svg" alt="Error" class="navbar__srcIconPlay">
             </div>
 
             <div class="navbar__next">
-              <img src="" alt="Error" class="navbar__srcIconNext">
+              <img src="../src/icons/right Prev & Next.svg" alt="Error" class="navbar__srcIconNext">
             </div>
-          </div>
-        </div>
+        </section>
       </main>
+    </div>
+      
     </div>
     <script src="../js/main.js"></script>
   </body>
